--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
       <!-- Title -->
      
         <center>
-          <h1>I'm Divi Tejo Kashyap</h1>
-          <h3>a web developer</h3>
+          <div style="color:white;">
+            <h1>I'm Divi Tejo Kashyap</h1>
+            <h3>a web developer</h3>
+          </div>
+          
       </center>
 
     </div>
