--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Title -->
      
         <center>
-          <div style="color:white;">
+          <div style="color:white; padding-bottom: 30px;">
             <h1>I'm Divi Tejo Kashyap</h1>
             <h3>a web developer</h3>
           </div>
