--- a/index.html
+++ b/index.html
@@ -17,14 +17,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
   <!--Jquery-->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/d472c9de92.js" crossorigin="anonymous"></script>
@@ -56,14 +50,16 @@
         </div>
       </nav>
       <!-- Title -->
-     
-        <center>
-          <div style="color:white; padding-top: 30px;">
-            <h1>I'm Divi Tejo Kashyap</h1>
-            <h3>a web developer</h3>
-          </div>
-          
-      </center>
+      <div class="row" style="padding-top: 4.5rem;">
+        <div id="Intro" class="col-lg-6">
+          <h1>I'm Divi Tejo Kashyap</h1>
+          <h3>a web developer</h3>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/laptop.png" alt="laptop" width="200px" class="laptop">
+        </div>
+      </div>
+
 
     </div>
   </section>
@@ -77,7 +73,7 @@
       <div class="col-lg-6 employee">
         <img src="images/employee.png" alt="" width="20%">
       </div>
-      <div class="col-lg-6 about" style="padding-right: 100px;">
+      <div class="col-lg-6 about" style="padding-right: 100px; margin:auto;">
         <p>Hi! I am entry-Level web Developer with a passion for web application development <br> and skilled in
           HTML5,CSS,JavaScript and Python3</p>
       </div>
@@ -88,31 +84,35 @@
     <center>
       <h3 style="padding-bottom: 52px;"><b>My Recent Projects</b></h3>
     </center>
-    <h4><b>Simple Search engine</b></h4>
-    <div class="row">
-      <div class="col-md-6">
-        <p>A search engine is a website through which users can search internet content. In this project Python Modules
-          beautiful soup(bs4) and flask
-          micro Framework were used.</p>
-      </div>
-      <div class="col-md-6">
-        <img src="images/search.png" alt="" width=18% class="search">
-      </div>
-    </div>
-    <div>
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/terminal.png" width=18% class="chat">
+
+    <div id="projects_" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h4><b>Search engine</b></h4>
+          <p>A search engine is a website through which users can search internet content. In this project Python
+            Modules
+            beautiful soup(bs4) and flask
+            micro Framework were used.</p>
+          <img src="images/search.png" alt="" width=10% class="search">
         </div>
-        <div class="col-md-6">
-          <h4><b>Simple TCP Chat Room</b></h4>
+        <div class="carousel-item">
+          <h4><b>TCP Chat Room</b></h4>
           <p>Every time a user connects, a separate thread will be created for that user.
-            In each thread, the server awaits a message, and sends that message to other users currently on the chat.
+            In each thread, the server awaits a message, and sends that message to other users currently on the
+            chat.
             In this project sockets and multithreading python modules were used.</p>
+          <img src="images/terminal.png" width=10% class="chat">
         </div>
       </div>
-      <div>
-      </div>
+      <a class="carousel-control-prev" role="button" data-bs-target="#projects_" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" role="button" data-bs-target="#projects_" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
 
 
   </section>
@@ -125,7 +125,8 @@
       <a href="mailto:divitejokashyap@gmail.com"><img src="images/gmail.png" alt=""></a>
       <a href="https://www.linkedin.com/in/divitejokashyap/" target="blank"><img src="images/linkedin.png" alt=""></a>
       <a href="https://github.com/DiviTejoKashyap" target="blank"><img src="images/github.png" alt=""></a>
-      <a href="https://www.hackerrank.com/divitejokashyap" target="blank"><img src="images/hackerrank.png" alt=""></a><br>
+      <a href="https://www.hackerrank.com/divitejokashyap" target="blank"><img src="images/hackerrank.png"
+          alt=""></a><br>
     </div>
   </footer>
 
