--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
       </nav>
       <!-- Title -->
       <div class="row" style="padding-top: 4.5rem;">
-        <div id="Intro" class="col-lg-6">
-          <h1>I'm Divi Tejo Kashyap</h1>
-          <h3>a web developer</h3>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/laptop.png" alt="laptop" width="200px" class="laptop">
-        </div>
+        <center>
+            <div id="Intro">
+              <h1>I'm Divi Tejo Kashyap</h1>
+              <h3>a web developer</h3>
+            </div>
+        </center>
+        
+        
       </div>
 
 
