--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <center>
             <div id="Intro">
               <h1>I'm Divi Tejo Kashyap</h1>
-              <h3>Data Science Enthusist</h3>
+              <h3>Data Science Enthusiast</h3>
             </div>
         </center>
         
